# Hazelnut.EdgeWebView

./: .gitignore  CMakeLists.txt  vcpkg.json
app/: app.manifest  sample.cpp
bridge/dotnet/: .gitignore  Hazelnut.EdgeWebView.sln
bridge/dotnet/Hazelnut.EdgeWebView/: Hazelnut.EdgeWebView.csproj
bridge/dotnet/Hazelnut.EdgeWebView.Shared/: Hazelnut.EdgeWebView.Shared.projitems  Hazelnut.EdgeWebView.Shared.shproj  NavigatedEventArgs.cs  NavigatingEventArgs.cs  UnityUtil.cs  WebView.Module.cs  WebView.cs  WebViewOptions.cs
bridge/dotnet/Hazelnut.EdgeWebView.Unity/: Hazelnut.EdgeWebView.Unity.csproj
bridge/dotnet/Sample/: PInvoke.cs  Program.cs  Sample.csproj
bridge/dotnet/Sample/Properties/: launchSettings.json
bridge/dotnet/UnitySample/Assets/Scenes/: SampleScene.unity
bridge/dotnet/UnitySample/Assets/Scripts/: WebViewLauncher.cs
bridge/dotnet/UnitySample/ProjectSettings/: ProjectSettings.asset
include/: EdgeWebView.h  Implementation.h
src/: DllMain.cpp  EdgeWebView.cpp  Implementation.cpp
